Add stock splits endpoint
